# brain_intelligence-main

./: .dockerignore  .env.example  .env.phase3.example  .eslintrc.json  .gitignore  AI_OPERATIONS_MANUAL.md  AI_TROUBLESHOOTING.md  INSTALL.md  INSTALL_PHASE3B_OVERLAY.md  INSTALL_PHASE3_OVERLAY.md  INTEGRATION_NOTES.md  INTEGRATION_NOTES_SECTION11.md  INTEGRATION_NOTES_SECTION7.md  INTEGRATION_NOTES_SECTION8.md  INTEGRATION_NOTES_SECTION9.md  INTEGRATION_README.md  PHASE0_BASELINE_REPORT.md  PHASE10_WORKED_FILES_MANIFEST.md  PHASE11_INSTALL.md  PHASE11_UI_ROUTER_CONTRACT_FIX.md  PHASE11_WORKED_FILES_MANIFEST.md  PHASE12_WORKED_FILES_MANIFEST.md  PHASE1_EMBEDDING_LOCK_REPORT.md  PHASE1_ENGINEERING_EXECUTION_GUIDE.md  PHASE1_WORKED_FILES_MANIFEST.md  PHASE1_WORKED_FILES_MANIFEST_COMMON_INFRA.md  PHASE2_CONTRACT_CORRECTIONS_MANIFEST.md  PHASE2_ERROR_ENVELOPE_COMPATIBILITY_MANIFEST.md  PHASE2_ROUTER_RECOVERY_SUMMARY.md  PHASE2_WORKED_FILES_MANIFEST.md  PHASE2_WORKED_FILES_MANIFEST.txt  PHASE3_ENGINEERING_EXECUTION_GUIDE_LATHIKA.md  PHASE3_GATEWAY_TRANSPARENT_RELAY_AUDIT.md  PHASE3_INFRASTRUCTURE_VALIDATION_SUMMARY.md  PHASE3_REGRESSION_STABILITY_REPORT.md  PHASE3_SOLO_SAFE_AUDIT.md  PHASE3_WORKED_FILES_MANIFEST.md  PHASE3_WORKED_FILES_MANIFEST_PHASE3B.md  PHASE4_ENGINEERING_EXECUTION_GUIDE_LATHIKA.md  PHASE4_EXIT_CHECKLIST.md  (+62 more)
app/: __init__.py  main.py
benchmarks/: locustfile.py  memory_leak_audit.py
core/: phase0_contracts.py
docs/: AI_CORS_INTEGRATION.md  AI_PAYLOAD_SPEC.md  api_contracts.md  industrial_knowledge_ontology.md  neo4j_phase2_implementation.md  (+7 more)
(+243 files in other folders)
