[project]
name = "ai-platform"
version = "0.1.0"
description = "Industrial Operating Brain (IOB) — AI Intelligence Platform backend (Phase 0: Architecture & Contracts)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "neo4j>=5.24.0",
    "qdrant-client>=1.11.3",
    "xgboost>=2.1.1",
    "shap>=0.46.0",
    "lime>=0.2.0.1",
    "langgraph>=0.2.34",
    "sentence-transformers>=3.1.1",
    "scikit-learn>=1.5.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "black>=24.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
